# teams_checket

./: .gitignore  Cargo.toml
logs/: app.log.2025-04-19
release/: README.hwp  config.cfg  missing.txt  test.xlsx
release/logs/: app.log.2025-04-19
src/: consts.rs  lib.rs  main.rs  notification.rs  utils.rs
subtool/: pyvenv.cfg
subtool/Scripts/: activate  activate.bat  player-script.py
subtool/src/: main.py
