[package]
name = "checker"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.40"
tokio = { version = "1.15", features = ["full", "tracing"] }
calamine = "0.23.0"
zip = { version = "=2.5.0" }
log = "0.4.27"
env_logger = "0.11.8"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }